--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
        </tr>
     </table>
 <a
-href="file:///C:/Users/Ambrose/Desktop/New%20folder/RegistrationPage.html">
+href="https://ambrosehm.github.io/page4/">
 <input type="submit"/>
 </a>
 <input type="Reset" value="Reset" /> <br>
