--- a/index.html
+++ b/index.html
@@ -1,39 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head></head>
-<body style="background-color:ghostwhite">
+<body>
+    <link rel="stylesheet" href="body{.css">
 <center>
-<caption>Application Form</caption>
+    <h2>Application Form</h2>
 <fieldset>
     <table>
        <tr>
-           <td>Name: <input type="text" name="name" value=""/> </td>
+           <td>
+               <h4>Name:</h4>
+               <input type="text" name="name" value=""/> </td>
        </tr>
        <tr>
-           <td>Email:<input type ="email" name="email" value=""/></td>
+           <td>
+                <h4>Email:</h4>
+               <input type ="email" name="email" value=""/></td>
        </tr>
        <tr>
-           <td> Date of Birth:<input type="date" name="begin"
+           <td> 
+                <h4>Date of Birth:</h4>
+               <input type="date" name="begin"
             placeholder="dd-mm-yyyy" value=""
     min="1997-01-01" max="2030-12-31"></td>
        </tr>
       <tr>
-          <td> Gender:<input type="radio" name="gender" value="male">Male 
+          <td>
+               <h4>Gender:</h4>
+              <input type="radio" name="gender" value="male">Male 
             <input type="radio" name="gender" value="female">Female 
             <input type="radio" name="gender" value="other">Other </td>
       </tr>
     <tr>
-        <td>Phone Number:<input type="tel" id="phone" name="Phone Number" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"> </td>
+        <td>
+             <h4>Phone Number:</h4>
+            <input type="tel" id="phone" name="Phone Number" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"> </td>
     </tr>
       <tr>
           <td>
-              <label>Hobbies</label><br>
+               <h4>Hobbies:</h4><br>
               <textarea name="Hobbies" id="" cols="30" rows="10"></textarea>
           </td>
       </tr>
        <tr>
            <td>
-            <label>Address</label><br>
+             <h4>Address:</h4><br>
             <textarea name="Address" id="" cols="30" rows="10"></textarea>
            </td>
        </tr>
